# serum-dev-tools

./: .gitignore  README.md  index.html  modules.html
.github/workflows/: package.yml  publish-docs.yml  publish-npm.yml
assets/: highlight.css  search.js
classes/: Coin.html  Dex.html  DexMarket.html  FileKeypair.html
cli/: .gitignore  Cargo.toml  README.md
cli/src/: config.rs  errors.rs  lib.rs  utils.rs
cli/src/commands/: deploy.rs  init.rs  instance.rs  mod.rs
interfaces/: MarketAccounts.html
ts/: .eslintrc  .gitignore  README.md  jest.config.js  package.json  tsconfig.cjs.json  tsconfig.json
ts/.husky/: pre-commit
ts/docs/: modules.html
ts/docs/classes/: Coin.html  Dex.html  DexMarket.html  FileKeypair.html
ts/docs/interfaces/: MarketAccounts.html
ts/examples/: marketFilter.ts  marketMaking.ts
ts/examples/keys/: owner.json
ts/scripts/: keypair.ts  marketFilter.ts  marketMaking.ts  sample.ts
ts/scripts/keys/: owner.json
ts/src/: coin.ts  dex.ts  fileKeypair.ts  index.ts  market.ts  types.ts  utils.ts
ts/src/scripts/: cranker.ts  marketMaker.ts
ts/tests/: dev.spec.ts
