[package]
name = "serum-dev-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "serum-dev-tools"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0.56"
anchor-client = "0.23.0"
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
solana-sdk = "1.8.14"
thiserror = "1.0.30"