[package]
name = "serum-dev-tools"
version = "0.0.2"
edition = "2021"
authors = ["Sayantan Karmakar <sayantankarmakar@outlook.com>"]
homepage = "https://github.com/project-serum/serum-dev-tools"
repository = "https://github.com/project-serum/serum-dev-tools"
description = "Developer Tooling Suite for building on Serum Dex"
license = "Apache-2.0"
keywords = ["solana", "project-serum", "serum-dex", "devtools"]

[[bin]]
name = "serum-dev-tools"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0.56"
anchor-client = "0.24.2"
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
solana-sdk = "1.8.14"
thiserror = "1.0.30"